<resources>
    <string name="app_name">Dl demo</string>
    <string name="already_registered">already registered</string>
    <string name="email_verify_again">email verify again</string>
    <string name="error_view">error view</string>
    <string name="sign_in">sign in</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="login_here">login here</string>
    <string name="reset_password">reset password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_here">register here</string>
    <string name="not_registered_yet">not registered yet</string>
    <string name="forgot_password">forgot password</string>
    <string name="click_here">click here</string>
    <string name="or">or</string>
    <string name="todo">todo</string>
    <string name="register">register</string>
    <string name="login">Login</string>
    <string name="logout">logout</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="beginner">Beginner</string>
    <string name="choose_your_level">Choose Your Level</string>
    <string name="this_is_a_sample_sentence">This is a sample sentence.</string>
    <string name="enter_your_translation_here">Enter your translation here</string>
    <string name="this_text_has_some_errors">This text has some errors.</string>
    <string name="enter_your_correction_here">Enter your correction here</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="test_title">Test Title</string>
    <string name="test_instructions">Test Instructions</string>
    <string name="start_test">Start Test</string>
    <string name="splash_screen_logo_cd">splash screen logo cd</string>
    <string name="made_in_morroco">made in Morocco</string>
    <string name="login_screen_bg_rectangle_cd">login screen bg rectangle cd</string>
    <string name="remember_me">remember me</string>
    <string name="create_account">create account</string>
    <string name="welcome_back">welcome back</string>
    <string name="join_community">join community</string>
    <string name="google_sign_in">google sign in</string>
    <string name="aboutus_description">
        Our Android app is designed to showcase our skills in programming
        and to serve as a proof-of-concept project.
        It is a replica of the popular language-learning app, Duolingo,
        which we have designed for educational purposes only.
        We would like to emphasize that this project is not intended for public release,
        and any use of the Duolingo trademark is solely for demonstrative purposes.
        We respect the intellectual property rights of Duolingo and acknowledge that the use
        of their trademark in our app does not imply any endorsement or affiliation with their organization.
        We hope that our app provides a valuable learning experience
        to its users while demonstrating our abilities in software development.
    </string>
    <string name="made_in_emsi">made in EMSI</string>
</resources>