<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/duolingo"
        tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="25dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="#689F38"
                android:textSize="30sp"
                android:textStyle="bold" />




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fpEmailTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/resetPasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_bg"
                android:text="@string/reset_password"
                android:textColor="#212121"
                tools:ignore="TextContrastCheck" />

</LinearLayout>
</LinearLayout>