<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splashScreenAppLogo"
        android:layout_width="400dp"
        android:layout_height="483dp"
        android:layout_above="@+id/animation_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="41dp"
        android:contentDescription="@string/splash_screen_logo_cd"
        app:lottie_autoPlay="true"
        app:lottie_fileName="logo.json"
        app:lottie_loop="true"
        app:lottie_speed="0.9"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/splashScreenAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone" />


    <TextView
        android:id="@+id/splashScreenMadeInMorocco"
        android:layout_width="202dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/made_in_emsi"
        android:textSize="@dimen/largeText" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="204dp"
        android:layout_height="99dp"
        android:layout_above="@+id/splashScreenMadeInMorocco"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="8dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="minilogi.json"
        app:lottie_loop="true"
        app:lottie_speed="0.9"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>