<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0" />


    <TextView
        android:id="@+id/title_texttview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="translate this text "
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question_texttview"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_below="@+id/seekBar"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="19dp"
        android:padding="16dp"
        android:text="What is the name of the object in the picture?"
        android:textColor="@color/teal_200"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_texttview"
        android:layout_marginTop="69dp"
        android:orientation="horizontal"
        android:padding="16dp">


        <TextView
            android:id="@+id/option1_texttview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:onClick="optfunc"
            android:text="@string/option_1"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/option2_texttview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/option_2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/option3_texttview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/option_3"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/option4_texttview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/option_4"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/selected_option_texttview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/options_layout"
        android:layout_below="@+id/options_layout"
        android:layout_marginTop="-167dp"
        android:layout_marginBottom="13dp"
        android:padding="16dp"
        android:text=""
        android:textColor="@color/teal_200"
        android:textSize="18sp" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="191dp"
        android:background="@drawable/button_bg"
        android:onClick="onSubmitButtonClick"
        android:padding="12dp"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>
