<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/loginScreenTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BackArrow"
            android:layout_width="45dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="7dp"
            android:contentDescription="create account"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_forward_24"
            app:tint="@color/white"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/loginScreenWelcomeBack"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="118dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="4dp"
            android:layout_toStartOf="@+id/BackArrow"
            android:text="Register Here"
            android:textColor="@color/white"
            android:textSize="@dimen/extraLargeText"
            android:textStyle="bold"
            android:transitionName="welcome_transition"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/logincreenAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-66dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="260dp"
            android:contentDescription="create account"
            android:src="@drawable/duolingo"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <Button
        android:id="@+id/loginScreenCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mediumMargin"
        android:layout_marginBottom="@dimen/mediumMargin"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/create_account"
        android:textColor="#2E7D32"
        android:textSize="@dimen/smallText"
        android:transitionName="create_account_transition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenGoogleLoginButton" />

    <Button
        android:id="@+id/loginScreenLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeMargin"
        android:layout_marginTop="@dimen/mediumMargin"
        android:layout_marginEnd="@dimen/largeMargin"
        android:background="@drawable/rounded_buttons"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/mediumText"
        android:transitionName="login_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/loginScreenGoogleLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeMargin"
        android:layout_marginTop="@dimen/mediumMargin"
        android:layout_marginEnd="@dimen/largeMargin"
        android:background="@drawable/bckg"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/login_screen_google_logo"
        android:text="@string/google_sign_in"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/mediumText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenLoginButton" />

    <ImageView
        android:id="@+id/loginScreenBackgroundRectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/loginScreenBackgroundRectangleTopMargin"
        android:background="@drawable/background_rectangle_corners"
        android:contentDescription="@string/login_screen_bg_rectangle_cd"
        android:transitionName="bgrect_transition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/loginScreenProgressBar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/progress_bar_background"
        android:elevation="@dimen/mediumElevation"
        android:indeterminateTint="#ffffff"
        android:padding="@dimen/mediumPadding"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/largeMargin"
        android:layout_marginStart="@dimen/largeMargin"
        android:layout_marginTop="@dimen/smallMargin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginScreenPasswordTextInput">

        <Button
            android:id="@+id/loginScreenForgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/forgot_password"
            android:textColor="#2E7D32"
            tools:ignore="RelativeOverlap" />

        <CheckBox
            android:id="@+id/loginScreenRememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:buttonTint="@color/teal_200"
            android:text="@string/remember_me"
            android:textColor="#2E7D32" />
    </RelativeLayout>

    <TextView
        android:id="@+id/loginScreenCommunityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumMargin"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="@dimen/mediumMargin"
        android:fontFamily="@font/baloo"
        android:text="@string/login_here"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/mediumText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginScreenBackgroundRectangle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginScreenPasswordTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/largeMargin"
        android:layout_marginStart="@dimen/largeMargin"
        android:transitionName="password_transition"
        app:hintTextColor="@color/teal_200"
        app:boxStrokeColor="@color/teal_200"
        app:boxStrokeWidthFocused="@dimen/loginScreenBoxStrokeWidthFocused"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/teal_200"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginScreenEmailTextInput"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="@color/teal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginScreenPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            android:textCursorDrawable="@drawable/color_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginScreenEmailTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeMargin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/largeMargin"
        android:textColor="@color/green"
        android:textColorHint="#757575"
        android:transitionName="email_transition"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidthFocused="@dimen/loginScreenBoxStrokeWidthFocused"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginScreenCommunityTextView"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/teal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginScreenEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            android:textCursorDrawable="@drawable/color_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/loginScreenAppLogo"
        android:layout_width="117dp"
        android:layout_height="112dp"
        android:contentDescription="TODO"
        android:src="@drawable/duolingo"
        app:layout_constraintBottom_toTopOf="@+id/loginScreenCommunityTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginScreenBackgroundRectangle"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>